--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Views/MarcRecords/Download.cshtml
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Views/MarcRecords/Download.cshtml
@@ -4,4 +4,10 @@
 
 <h2>Download</h2>
 
-This page only excepts a Json HTTPpost of the class JsonMarcRecordRequest
+
+
+<p style="text-align: center;">
+    This page only excepts a Json HTTPpost.<br/><br/>
+    Please close this window and try again. <br/><br/>
+    <button onclick="window.close()">Close</button>
+</p>
