--- a/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Views/MarcRecords/Error.cshtml
+++ b/trunk/MarcRecordServiceSite/MarcRecordServiceSite/Views/MarcRecords/Error.cshtml
@@ -2,6 +2,8 @@
     ViewBag.Title = "Error";
 }
 
-<h2>Error</h2>
-
-There was an error processing your request. Please close this window and try again. 
+<p style="text-align: center;">
+There was an error processing your request.<br/><br/>
+    Please close this window and try again. <br/><br/>
+    <button onclick="window.close()">Close</button>
+</p>
