Updated MarkRecords Project to VS2017, fixed the ping controller, and updated the deployment script to deploy to technoserv02 instead of technoserv04

--- a/MarcRecordServiceSite/MarcRecordServiceSite/Views/Ping/Index.cshtml
+++ b/MarcRecordServiceSite/MarcRecordServiceSite/Views/Ping/Index.cshtml
@@ -4,11 +4,11 @@
     Layout = "";
 }
 <head>
-	<title>Ping | R2 Digital Library</title>
+	<title>Ping | Marc Records</title>
 </head>
 <body>		   
 
-<h2>R2 Library - Version 2 - Ping Page</h2>
+<h2>Marc Records - Version 1 - Ping Page</h2>
 <div>Version: @Model.Version</div>
 <div>Client IP Address: @Model.ClientIpAddress</div>
 <div>Database Status: @Model.DatabaseStatus</div>
